name:          tokenify
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Angus Thomsen
maintainer:    aksthomsen@gmail.com
homepage:      https://github.com/AKST/tokenify
synopsis:      A regex based LR tokenizer
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:    base >=4.7 && <4.8, text==1.2.*, containers==0.5.*
  Exposed-modules:  Text.Tokenify, Text.Tokenify.DSL, Text.Tokenify.Types
  hs-source-dirs:   src
  default-language: Haskell2010

source-repository head
  type:     git
  location: git@github.com:AKST/tokenify.git

